<resources>
    <string name="app_name">포모스트</string>
    <string name="app_description">이상이 일상이 되는 회고, 포모스트</string>

    <!--Main Menu-->
    <string name="four_most">4most</string>
    <string name="menu_daily">기록</string>
    <string name="menu_goal">목표</string>
    <string name="menu_remind">회고</string>
    <string name="menu_my">MY</string>

    <!--Daily Fragment-->
    <string name="weekly_goal">이번 주의 목표</string>
    <string name="your_daily_report">님의 하루 기록</string>
    <string name="msg_what_happend_today">오늘 하루 무슨 일이 있었나요?</string>
    <string name="msg_rate_satisfaction">만족도를 평가해주세요!</string>
    <string name="msg_store">저장할래요!</string>
    <string name="msg_report_denied_keyword_not_exist">키워드가 존재하지 않아 기록을 생성할 수 없어요.\n버튼을 눌러 키워드를 생성해보세요!</string>


    <!--Sign In-->
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="auto_sign_in">자동로그인</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="msg_sign_in_error">이메일과 비밀번호를 확인해주세요</string>

    <!--Sign Up Terms-->
    <string name="msg_allow_personal_information">[필수] 개인정보 수집이용 동의</string>
    <string name="msg_allow_service_terms">[필수] 서비스 이용약관 동의</string>
    <string name="msg_allow_alert">약관에는 ‘개인정보 수집 목적 및 이용’에 관한 중요한 내용이 담겨 있습니다.약관동의 체크는 해당 약관을 모두 숙지하였으며, 이에 동의함을 의미합니다.</string>
    <string name="next">다음</string>

    <!--Sign Up-->
    <string name="email_alert">사용 불가능한 이메일이에요!</string>
    <string name="name_alert">"형식에 맞지 않습니다"</string>
    <string name="name_hint">영문 혹은 한글로 작성해주세요.</string>
    <string name="email_alarm">입력한 이메일로 본인확인 메일이 전송 됩니다</string>
    <string name="email_hint">가입 할 이메일의 주소를 입력해 주세요.</string>
    <string name="password_hint">영어와 숫자 조합으로 6자리 이상 입력해 주세요.</string>
    <string name="star">"*  "</string>
    <string name="password_confirm_title">"  비밀번호 확인"</string>
    <string name="password_title">"  비밀번호"</string>
    <string name="email_title">"  이메일"</string>
    <string name="name_title">"  닉네임"</string>
    <string name="password_confirm_hint">한번 더 확인 해 주세요.</string>
    <string name="star_not_empty">*</string>
    <string name="sign_up_alarm">항목은 필수 입니다!</string>
    <string name="password_alert">비밀번호 조합이 틀려요!</string>
    <string name="password_dismatch">비밀번호가 서로 맞지 않아요!</string>

    <!--Report-->
    <string name="zero">"0"</string>
    <string name="report">리포트</string>
    <string name="keword_title">이번 주 키워드와\n얼마나 가까워졌나요?</string>
    <string name="report_empty">리포트 내용이 없어요</string>
    <string name="report_object">목표</string>
    <string name="daily_record">하루 기록</string>
    <string name="report_achieve">달성</string>
    <string name="report_not_achieve">미달성</string>
    <string name="report_not_object">이번주에 설정된 목표가 없어요.</string>

    <!--Remind-->
    <string name="remind_restore">저장하기</string>
    <string name="remind_back_really">정말 뒤로가시겠어요?</string>
    <string name="remind_back_alert">뒤로가기를 누르시면 작성 중인 내용이\n사라지고 이전 페이지로 돌아갑니다.</string>
    <string name="remind_back_edit_alert">뒤로가기를 누르시면 수정사항이\n삭제되고 이전 페이지로 돌아갑니다.</string>
    <string name="remind">회고</string>
    <string name="remove">삭제하기</string>
    <string name="cancel">취소하기</string>
    <string name="back">뒤로가기</string>
    <string name="remind_good">이번 주 좋았던 점</string>
    <string name="remind_limit">/800자</string>
    <string name="remind_good_content">이번 주, 어떤 을 칭찬 해 주고 싶나요?\n\n</string>
    <string name="remind_bad_content">이번 주, 아쉬움이 남는 점은 무엇인가요?\n\n</string>
    <string name="next_week_content">다음 주, 어떻게 보내고 싶으신가요?\n\n</string>
    <string name="remind_bad">이번 주 아쉬웠던 점</string>
    <string name="remind_next_week">다음 주 마음가짐</string>

    <!--Goal-->
    <string name="msg_plz_set_goal_by_keyword">이번 주 키워드별\n목표를 설정해주세요</string>
    <string name="msg_goal_has_not_been_set">개의 목표가 미설정 되었어요!</string>
    <string name="msg_delete">삭제할래요</string>
    <string name="msg_set_goal">목표를 세워주세요.</string>
    <string name="msg_achieved">달성</string>
    <string name="msg_not_achieved">미달성</string>
    <string name="msg_goal_denied_keyword_not_exist">키워드가 존재하지 않아 기록을 생성할 수 없어요.\n버튼을 눌러 키워드를 생성해보세요!</string>
    <string name="msg_keyword_not_exist_this_week">키워드가 없는 날이에요.</string>
    <string name="msg_check_goal_achievement">목표 달성여부 체크</string>
    <string name="msg_to_goal">에 가까워지기 위한 목표</string>
    <string name="msg_goal_achieve">목표 달성</string>
    <string name="msg_what_goal_want">이번에는 어떤 목표를 이루고 싶나요?</string>


    <!--My Page-->
    <string name="my_page">마이페이지</string>
    <string name="no_keyword_plus_please">목록에 키워드가 없어요.\n+ 버튼을 눌러 키워드를 생성해주세요!</string>
    <string name="my_goal_find">나만의 지향점을\n찾아봐요!</string>
    <string name="important_value_reset">핵심가치 재설정</string>
    <string name="priority_setting">우선순위 조정</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="important_value_reset_detail">핵심가치를 재설정할 경우,\n새로운 키워드로만 기록할 수 있습니다.\n\n그래도 변경하시겠습니까?</string>

    <!--KeywordAddFragment-->
    <string name="keyword_add">키워드 추가</string>
    <string name="what_is_your_important_word">삶에서 중요하게\n생각하는 가치는 무엇인가요?</string>
    <string name="four_important_value">삶의 핵심가치를 최대 4개까지 정해보세요!</string>
    <string name="please_add_yourself">가치관에 맞는 키워드를 직접 추가해주세요!</string>
    <string name="keyword_guide">키워드 가이드\n공백 없이 최대 5글자까지 가능해요.\n명사 형태를 추천해요.</string>
    <string name="btn_choice_complete">키워드 선택완료</string>
    <string name="btn_add">키워드 추가하기</string>
    <string name="input_value">가치를 입력해주세요.</string>
    <string name="there_is_space">잠깐! 공백이 있어요!</string>
    <string name="maximum_five_word">최대 5글자의 단어만 입력 가능해요!</string>
    <string name="already_exist">이미 생성 된 단어에요!</string>
    <string name="korean_keyboard">"^[ㄱ-ㅎ가-힣 \u318D\u119E\u11A2\u2022\u2025\u00B7\uFE55]*$"</string>

    <!--KeywordGuideSelectFragment-->
    <string name="keyword_setting">키워드 설정하기</string>
    <string name="what_is_important_thing_to_you">삶에서 중요하게\n생각하는 가치는 무엇인가요?</string>
    <string name="choose_eight">먼저 8개의 키워드를 선택해보세요!</string>
    <string name="attitude_for_life">삶과 관련된 가치</string>
    <string name="attitude_for_work">일과 관련된 가치</string>
    <string name="my_word">내가 추가한 키워드</string>
    <string name="complete">완료</string>
    <string name="modify">삭제</string>
    <string name="select_finish">키워드 선택하기</string>
    <string name="image_error">이미지가 열리지 않습니다.</string>
    <string name="up_to_eight">8개 까지 선택 가능해요!</string>
    <string name="too_many_keyword_selected">조금만 더 고민해서\n더 중요한 8개의 키워드만 남겨주세요.</string>

    <!--KeywordPopupActivity-->
    <string name="who_is_your_role_model_why">당신이 선망하는 사람은 누구인가요?\n그 이유는 무엇인가요?</string>
    <string name="example">예시</string>
    <string name="example_stevejobs">스티브 잡스\n우리가 이룬 것 만큼 이루지 못한 것도\n자랑스럽습니다 라고 말하는 자신감</string>
    <string name="popup_skip">건너뛰기</string>
    <string name="popup_finish">돌아가기</string>
    <string name="imagine_your_perfect_day">당신의 완벽한 하루를 상상해 보세요!\n어떤 것을 하고 있나요?</string>
    <string name="example_plan">계획한대로 하루를 분 단위로 쪼개서 바쁘게 살았을 때\n하루를 알차게 보냈다는 뿌듯함에서 오는 자랑스러움\n그것이 나의 완벽한 하루다</string>
    <string name="how_do_you_want_to_remembered">타인에게 어떤 사람으로\n기억되고 싶으신가요?</string>
    <string name="example_tmi">항상 가식없는 사람, 미담이 가득한 사람이 되고 싶다.\n어려운 일이라는 것을 알고 누군가를 나를 싫어하는 사람이 있\n을테지만 싫어 할 수가 없는 진정성 있는 사람이 되고싶다.</string>
    <string name="hard_to_select">키워드 선택이 어려우시다고요?</string>
    <string name="yuna_kim">처음부터 겁먹지 말자 막상 가보면\n아무것도 아닌게 세상에는 참으로 많다\n-김연아-</string>
    <string name="off_fun">퇴근 후 관심사가 비슷한 사람들과\n내가 가진 취미, 강점을 나누면서 소통하는 삶</string>
    <string name="what_kind_of_person">자기 분야에서 만큼은 탁월했던 사람\n가까운 주변 사람들에게 사랑 받는 사람</string>

    <!--KeywordGuideSelectDeepFragment-->
    <string name="keyword_select">키워드 선택</string>
    <string name="choose_four">선택한 가치 중에서\n더 중요한 것을 골라보세요</string>
    <string name="maximum_four">최종 키워드를 최대 4개까지 골라보세요!</string>
    <string name="up_to_four">4개까지 선택 가능해요!</string>
    <string name="think_more">조금만 더 고민해서\n더 중요한 4개의 키워드만 남겨주세요.</string>
    <string name="okay">확인</string>

    <!--KeywordSettingsActivity-->
    <string name="menu_keyword_priority">키워드 우선순위</string>
    <string name="menu_keyword_define">키워드 정의</string>
    <string name="msg_set_keyword_priority">키워드에 대한\n우선순위를 세워보세요!</string>
    <string name="msg_set_keyword_define">최종 선택한 키워드에요\n나만의 정의를 내려보세요!</string>
    <string name="msg_priority_set_complete">우선순위 지정 완료</string>
    <string name="msg_define_set_complete">정의 작성완료</string>
    <string name="msg_add_complete">작성완료</string>
    <string name="msg_write_your_definition">나만의 정의를 작성 해 주세요.</string>

    <!--KeywordListFragment-->
    <string name="priority_change">우선순위 변경 하기</string>
    <string name="alarm_show">이곳에서 우선순위를 변경하게 되면 기록, 회고, 목표에서\n변경한 순서대로 보여지게 됩니다.</string>
    <string name="priority_appoint">우선순위 지정</string>
    <string name="user_value">님이 추구하는 가치관이에요!</string>

    <!--MyPageSettingFragment-->
    <string name="sir">님</string>
    <string name="setting">설정</string>
    <string name="life_important_value">삶의 핵심가치</string>
    <string name="change_password_periodically">안전한 계정 이용을 위해 비밀번호는 주기적으로 변경해 주세요.</string>
    <string name="account_setting">계정 설정</string>
    <string name="identitiy_verification">본인인증</string>
    <string name="change_nickname">닉네임 변경</string>
    <string name="password_change">계정 비밀번호 변경</string>
    <string name="app_info">앱 정보</string>
    <string name="four_most_use_info">포모스트 이용안내</string>
    <string name="app_version">앱 버전 정보</string>
    <string name="terms_and_policies">약관 및 정책</string>
    <string name="four_most_terms_of_service">포모스트 이용약관</string>
    <string name="privacy_policy">개인정보 처리 방침</string>
    <string name="open_source">오픈소스라이선스</string>
    <string name="logout">로그아웃</string>
    <string name="withdrawal">회원 탈퇴</string>
    <string name="copyright">copyrightⓒ4(for)most</string>
    <string name="change">변경하기</string>
    <string name="msg_service_is_being_prepared">서비스 준비중입니다.</string>

    <!--Splash-->
    <string name="fourmost_start">포모스트 시작하기!</string>
    <string name="splash_explain1">내 삶의 지향점이 될\n가치관을 정해보세요</string>
    <string name="splash_explain2">가치관에 가까워지기 위한\n일상의 행동을 기록해보세요</string>
    <string name="splash_explain3">한 주간의 행동을 회고하면서\n더 나은 내일을 꿈꿔보세요</string>


    <!--Keyword-->
    <string name="menu_create_keyword">키워드 생성</string>
    <string name="msg_select_keyword_method">핵심가치를 정하기 위한\n방법을 선택해주세요!</string>
    <string name="msg_follow_guide">가이드 따라가기</string>
    <string name="msg_add_myself">직접 추가하기</string>

</resources>