<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.signin.SignInActivity">


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:src="@color/black"
            android:layout_marginTop="96dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/ib_auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="168dp"

            android:background="@android:color/transparent"
            android:src="@drawable/selector_checkbox"
            app:layout_constraintStart_toEndOf="@+id/iv_logo"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_sign_in"
            android:textSize="12sp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/ib_auto_login"
            app:layout_constraintStart_toEndOf="@+id/ib_auto_login"
            app:layout_constraintTop_toTopOf="@+id/ib_auto_login" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/selector_et_sign_in"
            android:textSize="12sp"
            android:hint="@string/email"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_auto_login" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/selector_et_sign_in"
            android:textSize="12sp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <LinearLayout
            android:id="@+id/ll_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password">

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="12sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="16dp"
                android:layout_marginStart="8dp"
                android:background="#C9C9C9" />

            <TextView
                android:id="@+id/tv_find_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/find_id"
                android:textSize="12sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="16dp"
                android:layout_marginStart="8dp"
                android:background="#C9C9C9" />

            <TextView
                android:id="@+id/tv_find_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/find_password"
                android:textSize="12sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/selector_btn_sign_in"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="60dp"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_other" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>