<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/popup_hard_to_select2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard_to_select"
            android:textSize="12sp"
            android:textColor="@color/mine_shaft"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/popup_image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popup_hard_to_select2"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/image_popup02" />

        <TextView
            android:id="@+id/imagine_your_perfect_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popup_image1"
            android:text="@string/imagine_your_perfect_day"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off_fun"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/silver"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imagine_your_perfect_day"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>