<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.keyword.method.KeywordMethodFragment">

        <TextView
            android:id="@+id/tv_select_method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/msg_select_keyword_method"
            android:textColor="@color/mainBlack"
            android:textSize="25sp"
            android:textFontWeight="900"
            android:textStyle="bold"
            android:layout_marginTop="48dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_follow_guide"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/rectangle_gray_radius_15"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/msg_follow_guide"
            android:gravity="center"
            android:textColor="@color/mainBlack"
            android:textSize="25sp"
            android:textFontWeight="900"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_method" />

        <TextView
            android:id="@+id/tv_add_myself"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/rectangle_gray_radius_15"
            android:gravity="center"
            android:text="@string/msg_add_myself"
            android:textColor="@color/mainBlack"
            android:textSize="25sp"
            android:textFontWeight="900"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_follow_guide" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>