<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_keyword_add_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/menu_keyword_list">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/keyword_setting"
                android:textColor="@color/cod_gray"
                android:textSize="21sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>


        <ScrollView
            android:id="@+id/sv_keyword_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_select_finish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_keyword_add_activity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_in_sv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_what_is_important"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:text="@string/what_is_important_thing_to_you"
                    android:textColor="@color/cod_gray"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/choose_eight"
                    android:textColor="@color/mainOrange"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_what_is_important"
                    app:layout_constraintTop_toBottomOf="@id/tv_what_is_important" />

                <TextView
                    android:id="@+id/tv_life"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:text="@string/attitude_for_life"
                    android:textColor="@color/cod_gray"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tv_sub"
                    app:layout_constraintTop_toBottomOf="@id/tv_sub" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_life"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    app:layout_constraintTop_toBottomOf="@id/tv_life"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/attitude_for_work"
                    android:textColor="@color/cod_gray"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/cg_life"
                    app:layout_constraintTop_toBottomOf="@id/cg_life" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_work"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_work"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_my_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/my_word"
                    android:textColor="@color/cod_gray"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@id/cg_work"
                    app:layout_constraintTop_toBottomOf="@id/cg_work" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_my_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_my_word"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_select_finish"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/select_finish"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/selector_btn_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>